tests/final/expect/15__diag__axis4_wave6_macro_state_undef_rebind_reentry_no_crash.diag
Diagnostics:
/Users/calebsv/Desktop/CodeWork/fisiCs/tests/final/probes/diagnostics/15__probe_diag_axis4_wave6_macro_state_undef_rebind_reentry_no_crash_a.h:9:12: error: macro 'AX4_W6_STATE_DISPATCH' requires 3 argument(s), got 2
Error: preprocessing failed
axis4_wave6_state_layer_a.h:521105:12: error: macro 'AX4_W6_STATE_DISPATCH' requires 3 argument(s), got 2
axis4_wave6_state_layer_a.h:521105:12: error: macro 'AX4_W6_STATE_DISPATCH' requires 3 argument(s), got 2
